--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,10 +23,12 @@
     },
     "plugins": [
         "react",
+        "react-hooks",
         "@typescript-eslint",
         "prettier"
     ],
     "rules": {
+      "react-hooks/exhaustive-deps": "warn",
       "prettier/prettier": "error",
       "import/extensions": [
         "error",
